...
  return (
    <>
      <Stack.Screen options={{ title: '' }} />
      {canGoBack ? (
        <Stack.Toolbar placement="left">
          <Stack.Toolbar.Button
            accessibilityLabel="BackButton"
            icon="chevron.left"
            onPress={() => router.back()}
          />
        </Stack.Toolbar>
      ) : (
        <Stack.Toolbar placement="left">
...
